--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Sass.js Loader Example</title>
 </head>
 <body>
+  <code>> Check console</code>
   <script src="node_modules/sass.js/dist/sass.js"></script>
   <script src="index.js"></script>
 </body>
